fixed stretched screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html,
+:host {
+  height: -webkit-fill-available;
+  height: 100%;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: hidden;
+  min-height: 100vh !important;
+  height: 100vh !important;
+  height: -webkit-fill-available;
+
 }
 mark {
   background-color: yellow; /* Adjust as needed */
